--- a/red-pencil-kata/build.gradle
+++ b/red-pencil-kata/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     }
 
     compile(
-            [group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.3.6', classifier: 'indy']
+            [group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.3.6', classifier: 'indy'],
     )
 }
